# hpm

./: .clippy.toml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .woodpecker.yml  CHANGELOG.md  CLAUDE.md  CLI_BEST_PRACTICES.md  CONTRIBUTING.md  Cargo.toml  IMPROVED_ERROR_HANDLING.md  README.md  book.toml  deny.toml  justfile  rust-toolchain.toml  rustfmt.toml
.claude/: README.md  architecture-analysis.md  implementation-plan.md  improvement-plan.md  mcp-integration.md  mcp-setup.md  package-storage-architecture.md  package-storage-summary.md  philosophy.md  project-aware-cleanup-design.md  settings.json
.claude/agents/: README.md  architecture-advisor.md  documentation-writer.md  hpm-developer.md  performance-specialist.md  rust-developer.md  rust-formatter.md  security-auditor.md  test-specialist.md
.claude/commands/: architecture-sync.md  performance-profile.md  security-audit.md
.claude/contexts/: hpm-architecture.md  hpm-manifest-spec.md  rust-conventions.md
.githooks/: commit-msg  pre-commit
.github/workflows/: ci.yml  fuzz.yml  release.yml
.woodpecker/: build-linux.yml  build-macos.yml  build-windows.yml  check.yml  mirror-github.yml
ci/: release-upload.ps1  release-upload.sh
crates/hpm-assets/: Cargo.toml
crates/hpm-assets/src/: asset.rs  hda.rs  lib.rs
crates/hpm-cli/: Cargo.toml
crates/hpm-cli/minimal-pkg/: .gitignore  README.md  hpm.toml  package.json
crates/hpm-cli/special-chars-test/: README.md  hpm.toml
crates/hpm-cli/special-chars-test/python/: __init__.py
crates/hpm-cli/src/: cli_validation_tests.rs  console.rs  error.rs  lib.rs  main.rs  output.rs  progress.rs  script_sink.rs
crates/hpm-cli/src/commands/: add.rs  audit.rs  build.rs  check.rs  clean.rs  global.rs  init.rs  install.rs  list.rs  manifest_utils.rs  migrate.rs  mod.rs  pack.rs  registry.rs  remove.rs  run.rs  search.rs  test_fixtures.rs  update.rs
crates/hpm-cli/test-standard-package/: README.md  hpm.toml  package.json
crates/hpm-cli/tests/: cli_validation.rs  integration_tests.rs
crates/hpm-config/: Cargo.toml
crates/hpm-config/src/: builder.rs  error.rs  install.rs  lib.rs  overlay.rs  project.rs  project_paths.rs  projects.rs  registry.rs  signing.rs  storage.rs
crates/hpm-core/: Cargo.toml
crates/hpm-core/proptest-regressions/: houdini_emission_model_tests.txt  project.txt
crates/hpm-core/proptest-regressions/storage/: types.txt
crates/hpm-core/src/: archive_fetcher.rs  asset_index.rs  dependency.rs  discovery.rs  fetch_manifest.rs  fuzz_tests.rs  graph.rs  houdini_conformance_tests.rs  houdini_emission_model_tests.rs  houdini_env_model.rs  houdini_prefs.rs  http.rs  integration_test.rs  lib.rs  lock.rs  manager.rs  package_source.rs  packer.rs  path_util.rs  process_util.rs  project.rs  project_tests.rs  script_run.rs  storage.rs  storage_tests.rs  tag_resolver.rs  tree_hash.rs
crates/hpm-core/src/archive_fetcher/: extract.rs
crates/hpm-core/src/global/: ledger.rs  mod.rs
crates/hpm-core/src/packer/: archive.rs  mod.rs  signing.rs  stage_filter.rs  tests.rs
crates/hpm-core/src/project/: error.rs  houdini_emit.rs  manifest_edit.rs  types.rs
crates/hpm-core/src/python/: bundled.rs  cleanup.rs  collection.rs  error.rs  mod.rs  resolver.rs  script_env.rs  types.rs  venv.rs  venv_layout.rs
crates/hpm-core/src/registry/: api.rs  git.rs  mod.rs  types.rs
crates/hpm-core/src/storage/: cleanup.rs  dev_install.rs  error.rs  types.rs
crates/hpm-core/tests/: asset_index_integration.rs  integration_test.rs  python_integration.rs
crates/hpm-error/: Cargo.toml
crates/hpm-error/src/: lib.rs
crates/hpm-installer/: Cargo.toml
crates/hpm-package/: Cargo.toml
crates/hpm-package/src/: atomic_write.rs  dependency.rs  env_value.rs  env_value_tests.rs  fuzz_tests.rs  houdini.rs  io_error.rs  lib.rs  manifest.rs  manifest_tests.rs  package_path.rs  path_util.rs  platform.rs  proptest_helpers.rs  python.rs  template.rs  toml_file_error.rs
crates/hpm-package/src/manifest/: compat.rs  env.rs  error.rs  hdk.rs  info.rs  legacy.rs  legacy_tests.rs  operators.rs  registry.rs  scripts.rs  stage.rs  validation.rs
crates/hpm-package/tests/: properties.rs
crates/hpm-python/: Cargo.toml
crates/hpm-python/proptest-regressions/: types.txt
crates/hpm-python/src/: bundled.rs  cleanup.rs  collection.rs  dependency.rs  integration.rs  integration_tests.rs  lib.rs  pep503.rs  resolver.rs  script_env.rs  types.rs  update.rs  venv.rs
crates/hpm-python/tests/: integration_tests.rs
crates/hpm-registry/: Cargo.toml
crates/hpm-registry/examples/: basic_client.rs  basic_server.rs
crates/hpm-registry/proto/: registry.proto
crates/hpm-registry/src/: lib.rs
crates/hpm-registry/src/client/: auth.rs  connection.rs  mod.rs  operations.rs
crates/hpm-registry/src/proto/: hpm.registry.v1.rs  mod.rs
crates/hpm-registry/src/server/: auth.rs  mod.rs  service.rs  storage.rs
crates/hpm-registry/src/types/: auth.rs  error.rs  mod.rs  package.rs
crates/hpm-registry/src/utils/: compression.rs  mod.rs  validation.rs
crates/hpm-registry/tests/: integration_tests.rs
crates/hpm-resolver/: Cargo.toml
crates/hpm-resolver/proptest-regressions/: version.txt
crates/hpm-resolver/src/: fuzz_tests.rs  lib.rs  solver.rs  version.rs
crates/hpm-resolver/tests/: integration_tests.rs
docs/: README.md  SUMMARY.md  api-overview.md  api-reference.md  architecture.md  cleanup-system.md  cli-design.md  developer-documentation.md  manifest.toml  property-based-testing-guide.md  python-dependency-management.md  python-guide.md  python-user-guide.md  registries.md  registry-architecture.md  registry-implementation-plan.md  registry-overview.md  registry-system-summary.md  security.md  system-deep-dives.md  technical-architecture.md  testing-configuration.md  testing.md  tutorials-and-examples.md  update-command.md  update-implementation-summary.md  user-guide.md
docs/archive/: README.md  registry-architecture.md  registry-implementation-plan.md  registry-overview.md  registry-system-summary.md  (+1 more)
scripts/: check-emojis.sh  install-git-hooks.sh
src/: lib.rs
(+1 files in other folders)
