[package]
name = "hpm-workspace"
version = "0.1.0"
authors = ["HPM Contributors"]
edition = "2021"
license = "MIT"
description = "Houdini Package Manager - A modern package management system for SideFX Houdini"
repository = "https://github.com/hpm-org/hpm"
homepage = "https://hpm.dev"
documentation = "https://docs.hpm.dev"
keywords = ["houdini", "package-manager", "vfx", "3d"]
categories = ["development-tools", "multimedia::images"]
rust-version = "1.70"

# This is a documentation-only crate for the workspace
[lib]
name = "hpm_workspace"
path = "src/lib.rs"

[workspace]
members = [
    "crates/hpm-cli",
    "crates/hpm-core",
    "crates/hpm-config",
    "crates/hpm-resolver",
    "crates/hpm-package",
    "crates/hpm-error",
    "crates/hpm-python"
]
# Removed empty placeholder crates until implementation:
# "crates/hpm-installer",
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["HPM Contributors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/hpm-org/hpm"
homepage = "https://hpm.dev"
documentation = "https://docs.hpm.dev"
keywords = ["houdini", "package-manager", "vfx", "3d"]
categories = ["development-tools", "multimedia::images"]
rust-version = "1.70"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
proptest = "1.5"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"

# Async HTTP and networking
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"

# File system and I/O
walkdir = "2.4"
tempfile = "3.8"
dirs = "5.0"

# Crypto and validation
sha2 = "0.10"
ring = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Console output and styling
anstream = "0.6"
console = { version = "0.16", features = ["std"] }
owo-colors = "4.1"
indicatif = "0.18"
miette = { version = "7.2", features = ["fancy-no-backtrace"] }

# Testing
tokio-test = "0.4"

# Additional dependencies for Python support
semver = "1.0"
indexmap = "2.0"
chrono = { version = "0.4", features = ["serde"] }
which = "6.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = 2
overflow-checks = true