[package]
name = "hpm-workspace"
version = "0.1.0"
authors = ["HPM Contributors"]
edition = "2021"
license = "MIT"
description = "Houdini Package Manager - A modern package management system for SideFX Houdini"
repository = "http://10.100.36.15:3000/soren-n/hpm"
homepage = "https://hpm.dev"
documentation = "https://docs.hpm.dev"
keywords = ["houdini", "package-manager", "vfx", "3d"]
categories = ["development-tools", "multimedia::images"]
rust-version = "1.74"

# This is a documentation-only crate for the workspace
[lib]
name = "hpm_workspace"
path = "src/lib.rs"

[workspace]
members = [
    "crates/hpm-cli",
    "crates/hpm-core",
    "crates/hpm-config",
    "crates/hpm-resolver",
    "crates/hpm-package",
    "crates/hpm-error",
    "crates/hpm-python"
]
# Removed empty placeholder crates until implementation:
# "crates/hpm-installer",
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["HPM Contributors"]
edition = "2021"
license = "MIT"
repository = "http://10.100.36.15:3000/soren-n/hpm"
homepage = "https://hpm.dev"
documentation = "https://docs.hpm.dev"
keywords = ["houdini", "package-manager", "vfx", "3d"]
categories = ["development-tools", "multimedia::images"]
rust-version = "1.74"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "fs", "process", "io-util"] }
clap = { version = "4.4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
proptest = "1.5"
toml = "0.8"
anyhow = "1.0"
thiserror = "2.0"

# Async HTTP and networking
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"

# File system and I/O
walkdir = "2.4"
tempfile = "3.8"
dirs = "5.0"

# Crypto and validation
sha2 = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Console output and styling
anstream = "0.6"
console = { version = "0.16", features = ["std"] }
owo-colors = "4.1"
indicatif = "0.18"
miette = { version = "7.2", features = ["fancy-no-backtrace"] }

# Testing
tokio-test = "0.4"

# Fuzzing (requires nightly Rust)
# Note: fuzzcheck only works with nightly, so we don't include it as a workspace dependency.
# Each crate that uses it should add it as an optional dev-dependency with a feature flag.

# Additional dependencies for Python support
semver = "1.0"
indexmap = { version = "2.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
which = "6.0"
zip = "2.2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = 2
overflow-checks = true