[package]
name = "hpm-workspace"
version = "0.9.2"
authors = ["HPM Contributors"]
edition = "2024"
license = "MIT"
description = "Houdini Package Manager - A modern package management system for SideFX Houdini"
repository = "https://github.com/3db-dk/hpm"
homepage = "https://hpm.dev"
documentation = "https://hpm.readthedocs.io"
keywords = ["houdini", "package-manager", "vfx", "3d"]
categories = ["development-tools", "multimedia::images"]
rust-version = "1.85"

# This is a documentation-only crate for the workspace
[lib]
name = "hpm_workspace"
path = "src/lib.rs"

[workspace]
members = [
    "crates/hpm-cli",
    "crates/hpm-core",
    "crates/hpm-config",
    "crates/hpm-resolver",
    "crates/hpm-package",
    "crates/hpm-python"
]
# Removed empty placeholder crates until implementation:
# "crates/hpm-installer",
resolver = "2"

[workspace.package]
version = "0.9.2"
authors = ["HPM Contributors"]
edition = "2024"
license = "MIT"
repository = "https://github.com/3db-dk/hpm"
homepage = "https://hpm.dev"
documentation = "https://hpm.readthedocs.io"
keywords = ["houdini", "package-manager", "vfx", "3d"]
categories = ["development-tools", "multimedia::images"]
rust-version = "1.85"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "fs", "process", "io-util"] }
clap = { version = "4.4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
proptest = "1.5"
toml = "1.0"
anyhow = "1.0"
thiserror = "2.0"

# Async HTTP and networking
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }

# File system and I/O
walkdir = "2.4"
ignore = "0.4"
tempfile = "3.8"

# Crypto and validation
sha2 = "0.11"
ed25519-dalek = { version = "2.1", features = ["rand_core", "pem"] }
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Console output and styling
console = { version = "0.16", features = ["std"] }
indicatif = "0.18"

# Testing
tokio-test = "0.4"


# Additional dependencies for Python support
semver = "1.0"
indexmap = { version = "2.0", features = ["serde"] }
zip = "8.4"
tar = "0.4"
flate2 = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = 2
overflow-checks = true