[package]
name = "hpm-assets"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Houdini package asset index model for HPM"

[dependencies]
serde.workspace = true
