[package]
name = "hpm-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "HPM (Houdini Package Manager) command-line interface"

[[bin]]
name = "hpm"
path = "src/main.rs"

[dependencies]
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
walkdir.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
anstream.workspace = true
console.workspace = true
owo-colors.workspace = true
indicatif.workspace = true
miette.workspace = true
hpm-package = { path = "../hpm-package" }
hpm-core = { path = "../hpm-core" }
hpm-config = { path = "../hpm-config" }
hpm-python = { path = "../hpm-python" }

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
serde_json.workspace = true

[package.metadata.cargo-machete]
ignored = ["indicatif"]