[package]
name = "hpm-config"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Configuration management for HPM (Houdini Package Manager)"

[dependencies]
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true