[package]
name = "hpm-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Core functionality for HPM (Houdini Package Manager)"

[dependencies]
serde.workspace = true
tracing.workspace = true
hpm-config = { path = "../hpm-config" }
hpm-package = { path = "../hpm-package" }
hpm-python = { path = "../hpm-python" }
thiserror.workspace = true
toml = "0.8"
toml_edit = "0.22"
tokio = { version = "1.43", features = ["macros", "rt", "fs"] }
serde_json = "1.0"
semver.workspace = true
sha2.workspace = true
walkdir.workspace = true
# For Git archive downloading
reqwest.workspace = true
zip = "2.2"
futures.workspace = true

[dev-dependencies]
tempfile = "3.13"
proptest.workspace = true