[package]
name = "hpm-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Core functionality for HPM (Houdini Package Manager)"

[dependencies]
serde.workspace = true
tracing.workspace = true
indexmap.workspace = true
async-trait = "0.1"
hpm-config = { path = "../hpm-config" }
hpm-package = { path = "../hpm-package" }
hpm-assets = { path = "../hpm-assets" }
thiserror.workspace = true
toml.workspace = true
toml_edit = "0.25"
tokio.workspace = true
serde_json.workspace = true
semver.workspace = true
sha2.workspace = true
walkdir.workspace = true
# For Git archive downloading
reqwest.workspace = true
# For URL parsing
url = "2"
zip.workspace = true
tar.workspace = true
flate2.workspace = true
ed25519-dalek.workspace = true
ignore.workspace = true
base64.workspace = true
glob = "0.3"
time.workspace = true
petgraph.workspace = true
# Only for `ScriptSink::run`'s return type — out-of-repo embedders
# implement the trait against anyhow; hpm-core's own errors are thiserror.
anyhow.workspace = true
tempfile.workspace = true

[target.'cfg(windows)'.dependencies]
# NTFS junctions for dev-link installs. Junctions work without Developer
# Mode/admin (unlike NTFS directory symlinks), which is the realistic baseline
# for Houdini Windows users.
junction = "2.0"

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true