[package]
name = "hpm-error"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Error handling for HPM (Houdini Package Manager)"

[dependencies]
thiserror.workspace = true
reqwest.workspace = true