[package]
name = "hpm-package"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "package functionality for HPM (Houdini Package Manager)"

[dependencies]
serde.workspace = true
toml.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
