[package]
name = "hpm-python"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Python dependency management for HPM"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
dirs = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }

# HPM internal dependencies
hpm-package = { path = "../hpm-package" }

# Python-specific dependencies
indexmap = { workspace = true, features = ["serde"] }
chrono = { workspace = true }
which = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }