[package]
name = "hpm-registry"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "registry functionality for HPM (Houdini Package Manager)"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sha2 = { workspace = true }
ring = { workspace = true }

# QUIC and gRPC
tonic = { version = "0.11", features = ["tls", "gzip"] }
prost = "0.12"

# Additional dependencies
zstd = "0.13"
tokio-stream = "0.1"
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
hex = "0.4"

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "registry-server"
path = "src/bin/registry-server.rs"
