[package]
name = "hpm-resolver"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "resolver functionality for HPM (Houdini Package Manager)"

[dependencies]
# TODO: Add resolver-specific dependencies when implementing functionality
