[package]
name = "hpm-resolver"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "resolver functionality for HPM (Houdini Package Manager)"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["time", "macros", "rt"] }
tracing = "0.1"

[dev-dependencies]
proptest.workspace = true
tokio-test = "0.4"
