[package]
name = "hpm-resolver"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "resolver functionality for HPM (Houdini Package Manager)"

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dependencies.fuzzcheck]
version = "0.12"
optional = true

[dev-dependencies]
proptest.workspace = true
tokio-test.workspace = true

[features]
fuzz = ["fuzzcheck"]
